syntax = "proto3";

enum ImageFormat {
    FORMAT_UNSPECIFIED = 0;
    FORMAT_RGB = 1;
    FORMAT_GRAY = 2;
    FORMAT_BMP = 3;
}

message Image {
    uint32 id = 1; // unique ID for the image
    bytes image_data = 2;
    ImageFormat format = 3; // binary format 
}

message BoundingBox {
    // all coordinates are in pixels
    uint32 x = 1;
    uint32 y = 2;
    uint32 width = 3;
    uint32 height = 4;
    uint32 cls = 5; // class
    float confidence = 6;
}

message DetectionResults {
    uint32 id = 1; // ID of the image these results are for
    repeated BoundingBox results = 2;
}

message ObjectDetectionRequest {
    Image image = 1;
}

message ObjectDetectionResponse {
    DetectionResults results = 1;
}

service ObjectDetectionService {
    rpc ObjectDetection(ObjectDetectionRequest) returns (ObjectDetectionResponse);
}
